# Easel

./: .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  CLAUDE.md  README.md  components.json  index.html  package-lock.json  package.json  project.yml  vite.config.ts
.github/workflows/: build.yml  release.yml  test.yml
Easel/: Info.plist
Easel/Auth/: AuthManager.swift  LoginWebView.swift  SessionStore.swift
Easel/Models/: CanvasModels.swift  Session.swift
Easel/Networking/: CanvasAPI.swift  CanvasClient.swift
Easel/Stores/: AppData.swift  Prefs.swift
Easel/Util/: ContextCodes.swift
Easel/Views/: AnnouncementsView.swift  CalendarView.swift  CoursesView.swift  InboxView.swift  LoginView.swift
Easel/Views/Components/: CanvasHTMLView.swift  CommonViews.swift
Easel/Views/Course/: CourseDetailView.swift
apple/: .gitignore
apple/Easel/App/: EaselApp.swift
apple/Easel/Networking/: CanvasClient.swift  FileDownloader.swift
apple/Easel/Util/: Formatters.swift
apple/Easel/Views/: AppShellView.swift  DashboardView.swift  (+1 more)
src/: index.css  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auth.rs  commands.rs  lib.rs  main.rs  notifications.rs
src-tauri/src/api/: courses.rs  mod.rs  pagination.rs
src/components/: README.md
src/hooks/: use-courses.ts  use-mobile.ts
src/lib/: api.ts  context-codes.ts  errors.ts  format.ts  html.tsx  queries.ts
src/routes/: __root.tsx  _app.tsx  dashboard.tsx  index.tsx  login.tsx
src/stores/: auth.ts  courses.ts  dashboard-prefs.ts
(+69 files in other folders)
