[package]
name = "easel"
version = "0.1.0"
description = "Easel - a Canvas LMS desktop client"
authors = ["Eric Wang"]
edition = "2021"

[lib]
name = "easel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["cookies", "gzip", "json", "stream"] }
tokio = { version = "1", features = ["full"] }
url = "2"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
thiserror = "2"
futures-util = "0.3"
